added bin workflow and signup
